--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "express" : "~4.5.1",
 	"mongoose" : "~4.4",
 	"body-parser" : "~1.4.2",
-	"method-override" : "~2.0.2"
+	"method-override" : "~2.0.2",
+	"q": "^1.4.1"
   }
 }
 
