--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "searchstack",
   "main": "server.js",
   "dependencies": {
-    "express" : "~4.5.1",
-	"mongoose" : "~4.4",
-	"body-parser" : "~1.4.2",
-	"method-override" : "~2.0.2",
-	"q": "^1.4.1"
+    "body-parser": "~1.4.2",
+    "express": "~4.5.1",
+    "method-override": "~2.0.2",
+    "mongoose": "^4.8.2",
+    "q": "^1.4.1"
   }
 }
-
